refactor(gradle): Gradle update
- Update to gradle 5.5.1

Took 2 hours 50 minutes

--- a/application/core/build.gradle
+++ b/application/core/build.gradle
@@ -1,7 +1,7 @@
 description = "Entities (domain objects) and uses cases that implement the business logic"
 
 dependencies {
-    compile libs.string_utils
+   implementation libs.string_utils
 
-    testCompile libs.unit_tests
+    testImplementation libs.unit_tests
 }
